toolkit-v2 update slide toggle component

--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -23,6 +23,9 @@
       <span header-link="examples"></span>Examples</span>
   </div>
 
+  <div class="doc-title-3">
+    Basic slide-toggles
+  </div>
   <div class="doc-desc-2">
     Default slide toggle is an on/off control that can be toggled via clicking
     or dragging. </div>
@@ -30,11 +33,13 @@
     <div app-docs-example="slide-toggle-basic"></div>
   </div>
 
-
+  <div class="doc-title-3">
+    Configurable slide-toggle
+  </div>
   <div class="doc-desc-2">
-    Slide toggle that cannot be selected can a disabled state. </div>
+    Use this configuration below to customize a slide toggle that fit your needs best:</div>
   <div class="doc-example-container">
-    <div app-docs-example="slide-toggle-disable"></div>
+    <div app-docs-example="slide-toggle-configurable"></div>
   </div>
 
 
