--- a/src/assets/examples/slide-toggle-basic/slide-toggle-basic.component.html
+++ b/src/assets/examples/slide-toggle-basic/slide-toggle-basic.component.html
@@ -1,3 +1,1 @@
-<div class="example-centralization">
-  <mat-slide-toggle checked></mat-slide-toggle>
-</div>
+<mat-slide-toggle checked="true">Slide me!</mat-slide-toggle>
