Add step5 optiional

--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -220,7 +220,7 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Step 5: Add Material Icons
+    Step 5: Add Material Icons (OPTIONS)
     <span class="docs-markdown-h3" id="step5">
       <span header-link="step5"></span>Step 5: Add Material Icons</span>
   </div>
