--- a/src/assets/examples/menu-nested/menu-nested.component.html
+++ b/src/assets/examples/menu-nested/menu-nested.component.html
@@ -1,5 +1,5 @@
 <div class="example-centralization">
-  <button mat-button [matMenuTriggerFor]="start">Menu Start</button>
+  <button mat-flat-button color="primary" [matMenuTriggerFor]="start">Menu</button>
 </div>
 
 <mat-menu #start="matMenu" backdropClass="viz-menu">
