--- a/src/assets/examples/slider-basic/slider-basic.component.html
+++ b/src/assets/examples/slider-basic/slider-basic.component.html
@@ -1,6 +1,3 @@
 <div class="example-wrapper">
-  <viz-slider min="0"
-              max="200"
-              value="120"
-              tickInterval="40"></viz-slider>
+  <mat-slider></mat-slider>
 </div>
