update toolkit-v2 paginator component

--- a/src/assets/documents/components/paginator.html
+++ b/src/assets/documents/components/paginator.html
@@ -17,16 +17,26 @@
 
   <div class="doc-divider">
   </div>
-  <div class="doc-title-2">
+  <div class="doc-title-2 mb-24">
     Examples
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
-  <div class="doc-desc-2">
+
+  <div class="doc-title-4 mb-8">
+    Basic Paginator</div>
+  <div class="doc-desc-2 mb-16">
     The paginator displays a dropdown of page sizes for the user to choose from. </div>
   <div class="doc-example-container">
     <div app-docs-example="paginator-basic"></div>
   </div>
+
+  <div class="doc-title-4 mb-16">
+    Configurable paginator</div>
+  <div class="doc-example-container">
+    <div app-docs-example="paginator-configurable"></div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
