fix toolkit-v2 chips bug
351
Normal state font size is 16px
http://ss.cobbnguyen.com/dc5bfec23901

352
Padding top and bottom is smaller than design
http://ss.cobbnguyen.com/0fa79fb22b4e

353
Title "Chip" should be "Chips"
http://ss.cobbnguyen.com/18b460a1d471

--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -9,7 +9,7 @@
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Chip
+    Chips
   </div>
   <div class="doc-desc-1">
     Chips are compact elements that represent an input, attribute, or action.
