--- a/src/assets/examples/header-basic/header-basic.component.scss
+++ b/src/assets/examples/header-basic/header-basic.component.scss
@@ -27,11 +27,12 @@
 
   &-badge {
     span.mat-badge-content {
-      width: 14px !important;
-      height: 14px !important;
+      width: 20px !important;
+      height: 20px !important;
       padding: 0px !important;
-      line-height: 14px !important;
+      line-height: 20px !important;
       font-size: 10px;
+      // border: 2px solid #ffffff;
     }
   }
 }
