--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -9,7 +9,7 @@
     background: #ffffff;
     z-index: 10;
     box-shadow: 0 1px 0 0 #e9e9e9;
-    padding: 0 15px 0 42px;
+    padding: 0 0 0 40px;
     position: relative;
 
     .navbar-wrapper {
