--- a/libs/components/footer/viz-footer.component.html
+++ b/libs/components/footer/viz-footer.component.html
@@ -3,14 +3,14 @@
     <div class="footer-left">
       <ul class="nav">
         <li *ngFor="let brand of leftBrands">
-          <a href={{brand.link}}>{{brand.title}}</a>
+          <a [href]="brand.link ? brand.link : 'javascript:void(0)'">{{brand.title}}</a>
         </li>
       </ul>
     </div>
     <div class="footer-right">
       <ul class="nav">
         <li *ngFor="let brand of rightBrands">
-          <a href={{brand.link}}>{{brand.title}}</a>
+          <a [href]="brand.link ? brand.link : 'javascript:void(0)'">{{brand.title}}</a>
         </li>
       </ul>
     </div>
