--- a/src/assets/documents/components/footer.html
+++ b/src/assets/documents/components/footer.html
@@ -1,134 +1,132 @@
 <html>
+  <head></head>
 
-<head></head>
-
-<body>
-  <div class="doc-category-title">
-    Naviagtion
-    <span class="docs-markdown-h3" id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Footer
-  </div>
-  <div class="doc-desc-1">
-    Footers are a great way to organize a lot of site navigation and information at the end of a page. This is where the user
-    will look once they have finished scrolling through the current page or are looking for additional information about
-    your website. </div>
-
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Examples
-    <span class="docs-markdown-h3" id="examples">
-      <span header-link="examples"></span>Examples</span>
-  </div>
-  <div class="doc-desc-2">
-    Footer are a special kind of toolbar that&#x2019;s used for branding, navigation, search, and actions. </div>
-  <div class="doc-example-container">
-    <div app-docs-example="footer-basic"></div>
-  </div>
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3" id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-  <div class="doc-desc-2">
-    To get a customized header &amp; footer, just set
-    <span class="doc-desc-2-highlight">leftBrands/rightBrands</span>
-  </div>
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>leftBrands</td>
-        <td>List of links on left part of viz-footer.</td>
-        <td>array</td>
-        <td>[ ]</td>
-      </tr>
-      <tr>
-        <td>rightBrands</td>
-        <td>List of links on right part of viz-footer.</td>
-        <td>array</td>
-        <td>[ ]</td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Footer should:
-    <ul class="doc-list">
-      <li>Persistent: Footer appear at the top and bottom of each screen in an app, and can disappear upon scroll.</li>
-      <li>Guiding: Footer provide a reliable way to guide users through an app.</li>
-      <li>Consistent: Footer have a consistent position and content to increase familiarity.</li>
-      <li>Immediate: Footer can be accessed from any scroll position.</li>
-    </ul>
-  </div>
-
-  <div class="doc-divider">
-
-  </div>
-
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-  <div class="doc-desc-2">
-    If title text is long, use a prominent app bar and wrap the title to two lines. Don&#x2019;t truncate text, hiding the full title
-    may cause misunderstanding. Don&#x2019;t shrink text to fit on a single line.
-  </div>
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/footer-do.png" alt="">
+  <body>
+    <div class="doc-category-title">
+      Naviagtion
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:24px">
-      <img src="assets/img/doc/footer-one-dont.png" alt="">
+    <div class="doc-title-1">
+      Footer
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:24px">
-      <img src="assets/img/doc/footer-two-dont.png" alt="">
+    <div class="doc-desc-1">
+      The footer is a visible and out-of-the-way space to share the legal
+      information that our suite of products may be required to display.
     </div>
-  </div>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:248px">
-    <img src="assets/img/doc/footer-spec.png" alt="">
-  </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Examples
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
+    </div>
+    <div class="doc-desc-2">
+      when a user arrives at the footer of a website, it signals the end of that
+      page.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="footer-basic"></div>
+    </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
+    </div>
+    <div class="doc-desc-2">
+      To get a customized header &amp; footer, just set
+      <span class="doc-desc-2-highlight">leftBrands/rightBrands</span>
+    </div>
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>leftBrands</td>
+          <td>List of links on left part of viz-footer.</td>
+          <td>array</td>
+          <td>[ ]</td>
+        </tr>
+        <tr>
+          <td>rightBrands</td>
+          <td>List of links on right part of viz-footer.</td>
+          <td>array</td>
+          <td>[ ]</td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="doc-divider"></div>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
-  </div>
-  <div sketch-link=""></div>
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
+    </div>
+    <div class="doc-desc-2">
+      If title text is long, use a prominent app bar and wrap the title to two
+      lines. Don&#x2019;t truncate text, hiding the full title may cause
+      misunderstanding. Don&#x2019;t shrink text to fit on a single line.
+    </div>
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w100 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/footer-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w100 docs-usage-center"
+        style="height:160px;margin-top:24px"
+      >
+        <img src="assets/img/doc/footer-one-dont.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w100 docs-usage-center"
+        style="height:160px;margin-top:24px"
+      >
+        <img src="assets/img/doc/footer-two-dont.png" alt="" />
+      </div>
+    </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
 
+    <div class="docs-usage-spec docs-usage-center" style="height:248px">
+      <img src="assets/img/doc/footer-spec.png" alt="" />
+    </div>
 
-
-
-</body>
-
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <a
+      class="doc-download-link"
+      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
+      >Download Sektch File</a
+    >
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link=""></div>
+  </body>
 </html>
