update toolkit-v2 button document page

--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -1,225 +1,249 @@
 <html>
+  <head></head>
 
-<head></head>
+  <body>
+    <div class="doc-category-title">
+      Buttons &amp; Indicators
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
+    </div>
+    <div class="doc-title-1">
+      Button
+    </div>
+    <div class="doc-desc-1">
+      Buttons make common actions immediately visible and easy to perform with
+      one click or tap. They can be used for any type of action, including
+      navigation.
+    </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2 mb-24">
+      Examples
+      <span class="docs-more-example"></span>
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
+    </div>
 
-<body>
-  <div class="doc-category-title">
-    Buttons &amp; Indicators
-    <span class="docs-markdown-h3" id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Button
-  </div>
-  <div class="doc-desc-1">
-    Buttons make common actions immediately visible and easy to perform with
-    one click or tap. They can be used for any type
-    of action, including navigation.
-  </div>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2 mb-24">
-    Examples
-    <span class="docs-more-example"></span>
-    <span class="docs-markdown-h3" id="examples">
-      <span header-link="examples"></span>Examples</span>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Basic Buttons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-basic"></div>
+    </div>
 
-  <div class="doc-title-4 mb-16">
-    Basic Buttons
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-basic"></div>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Raised Buttons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-raised"></div>
+    </div>
 
-  <div class="doc-title-4 mb-16">
-    Raised Buttons
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-raised"></div>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Flat Buttons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-flat"></div>
+    </div>
 
-  <div class="doc-title-4 mb-16">
-    Flat Buttons
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-flat"></div>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Stroked Buttons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-stroked"></div>
+    </div>
 
-  <div class="doc-title-4 mb-16">
-    Stroked Buttons
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-stroked"></div>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Icon Buttons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-icon"></div>
+    </div>
 
-  <div class="doc-title-4 mb-16">
-    Icon Buttons
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-icon"></div>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Floating Action Buttons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-floating"></div>
+    </div>
 
-  <div class="doc-title-4 mb-16">
-    Floating Action Buttons
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-floating"></div>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Mini Floating Action Buttons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-floating-mini"></div>
+    </div>
 
-  <div class="doc-title-4 mb-16">
-    Mini Floating Action Buttons
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-floating-mini"></div>
-  </div>
+    <div class="doc-title-4 mb-8">
+      Icon Buttons <span modified-label=""></span>
+    </div>
+    <div class="doc-desc-2 mb-16">
+      Can be used when an action need to be emphasized.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-icon-left"></div>
+    </div>
 
-  <div class="doc-title-4 mb-8">
-    Icon Buttons <span modified-label=""></span>
-  </div>
-  <div class="doc-desc-2 mb-16">
-    Can be used when an action need to be emphasized.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-icon-left"></div>
-  </div>
+    <div class="doc-desc-2 mb-16">
+      Can be used when an action need to be emphasized.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-icon-right"></div>
+    </div>
 
-  <div class="doc-desc-2 mb-16">
-    Can be used when an action need to be emphasized.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="button-icon-right"></div>
-  </div>
-
-  <!-- <div class="doc-desc-2">
+    <!-- <div class="doc-desc-2">
     Use for actions that aren&#x2019;t currently available.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-disable"></div>
   </div> -->
 
-
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3" id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-  <div class="doc-desc-2">
-    To get a customized button, just set
-    <span class="doc-desc-2-highlight">color/disabled</span>
-  </div>
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>color</td>
-        <td>Theme color palette for the component.</td>
-        <td>string</td>
-        <td>primary</td>
-      </tr>
-      <tr>
-        <td>disabled</td>
-        <td>disabled state of button</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Buttons should:
-    <ul class="doc-list">
-      <li>Be clearly and accurately labeled.</li>
-      <li>Lead with strong, actionable verbs.</li>
-      <li>Use established button colors appropriately. For example, only use a
-        red button for an action that&#x2019;s difficult or impossible
-        to undo.</li>
-      <li>Prioritize the most important actions. Too many calls to action can
-        cause confusion and make merchants unsure of what
-        to do next.</li>
-      <li>Be positioned in consistent locations in the interface.</li>
-    </ul>
-  </div>
-
-  <div class="doc-divider">
-
-  </div>
-
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-  <div class="doc-desc-2">
-    Buttons should be clear and predictable&#x2014;data analyst should be able
-    to anticipate what will happen when they click a button.
-    Never deceive them by mislabeling a button.
-  </div>
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/button-predicable-do.png" alt="">
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/button-predicable-dont.png" alt="">
+
+    <div class="doc-desc-2">
+      To get a customized button, just set
+      <span class="doc-desc-2-highlight"
+        >color / disableRipple / disabled / isIconButton / isRoundButton /
+        ripple
+      </span>
     </div>
-  </div>
-  <div class="doc-desc-2">
-    Don&#x2019;t wrap text. For maximum legibility, a text label should remain
-    on a single line.
-  </div>
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/button-singleline-do.png" alt="">
+
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>color</td>
+          <td>Theme color palette for the component.</td>
+          <td>ThemePalette</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>disableRipple</td>
+          <td>Whether ripples are disabled.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>disabled</td>
+          <td>Whether the component is disabled.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>isIconButton</td>
+          <td>Whether the button is icon button.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>isRoundButton</td>
+          <td>Whether the button is round.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>ripple</td>
+          <td>Reference to the MatRipple instance of the button.</td>
+          <td>MatRipple</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="doc-divider"></div>
+    
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/button-singleline-dont.png" alt="">
+    <div class="doc-desc-2">
+      Buttons should be clear and predictable&#x2014;data analyst should be able
+      to anticipate what will happen when they click a button. Never deceive
+      them by mislabeling a button.
     </div>
-  </div>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/button-predicable-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/button-predicable-dont.png" alt="" />
+      </div>
+    </div>
+    <div class="doc-desc-2">
+      Don&#x2019;t wrap text. For maximum legibility, a text label should remain
+      on a single line.
+    </div>
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/button-singleline-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/button-singleline-dont.png" alt="" />
+      </div>
+    </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/button-spec.png" alt="">
-  </div>
+    <div class="docs-usage-spec docs-usage-center-no-scale" style="height:280px">
+      <img src="assets/img/doc/button-spec.png" alt="" style="width:660px"/>
+    </div>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component
-      Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
-    Sektch File</a>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path
-    within the Sketch App UI:
-  </div>
-  <div sketch-link=""></div>
-
-
-
-
-
-
-</body>
-
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <a
+      class="doc-download-link"
+      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
+      >Download Sektch File</a
+    >
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link=""></div>
+    <div sketch-link="1"></div>
+    <div sketch-link="2"></div>
+  </body>
 </html>
