--- a/src/assets/documents/components/buttontoggle.html
+++ b/src/assets/documents/components/buttontoggle.html
@@ -1,177 +1,223 @@
 <html>
+  <head></head>
 
-<head></head>
+  <body>
+    <div class="doc-category-title">
+      Buttons &amp; Indicators
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
+    </div>
+    <div class="doc-title-1">
+      Button Toggle
+    </div>
+    <div class="doc-desc-1">
+      Button toggles is are on/off toggles with the appearance of a button.
+      These toggles can be configured to behave as either radio-buttons or
+      checkboxes.
+    </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Examples
+      <span class="docs-more-example"></span>
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
+    </div>
 
-<body>
-  <div class="doc-category-title">
-    Buttons &amp; Indicators
-    <span class="docs-markdown-h3" id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Button Toggle
-  </div>
-  <div class="doc-desc-1">
-    Button toggles is are on/off toggles with the appearance of a button. These toggles
-    can be configured to behave as either radio-buttons or checkboxes.
-  </div>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Examples
-    <span class="docs-more-example"></span>
-    <span class="docs-markdown-h3" id="examples">
-      <span header-link="examples"></span>Examples</span>
-  </div>
+    <div class="doc-title-4 mb-8">
+      Three text toggles
+    </div>
+    <div class="doc-desc-2">
+      By default, button toggle acts like a radio button, only one item can be
+      selected.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="buttontoggle-three-text"></div>
+    </div>
 
-  <div class="doc-title-4 mb-8">
-    Three text toggles
-  </div>
-  <div class="doc-desc-2">
-    By default, button toggle acts like a radio button, only one item can be selected.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="buttontoggle-three-text"></div>
-  </div>
-
-  <!-- <div class="doc-title-4 mb-8">
+    <!-- <div class="doc-title-4 mb-8">
     Three text toggles with an disabled toggle
   </div>
   <div class="doc-example-container">
     <div app-docs-example="buttontoggle-disable"></div>
   </div> -->
 
-  <div class="doc-title-4 mb-8">
-    Two text toggle
-    <span modified-label=""></span>
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="buttontoggle-two-text"></div>
-  </div>
-
-  <div class="doc-title-4 mb-8">
-    Three icon toggle
-    <span modified-label=""></span>
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="buttontoggle-three-icon"></div>
-  </div>
-
-  <div class="doc-title-4 mb-8">
-    Two icon toggle
-    <span modified-label=""></span>
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="buttontoggle-two-icon"></div>
-  </div>
-
-  <div class="doc-title-4 mb-8">
-    Secondary color: Gray toggle
-    <span modified-label=""></span>
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="buttontoggle-secondary-color"></div>
-  </div>
-
-
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3" id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-  <div class="doc-desc-2">
-    To get a customized button, just set
-    <span class="doc-desc-2-highlight">color/disabled</span>
-  </div>
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>disabled</td>
-        <td>disabled state of button</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Button toggles should:
-    <ul class="doc-list">
-      <li>Familiar: Selection controls have been in user interfaces for a long time and
-        should be used as expected.</li>
-      <li>Scannable: It should be visible at a glance if a selection control has been
-        selected, and selected items should be more visually prominent than unselected
-        items.</li>
-      <li>Efficient: Button toggles make it easy to compare available options.</li>
-    </ul>
-  </div>
-
-  <div class="doc-divider">
-
-  </div>
-
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-  <div class="doc-desc-2">
-    Only one item can be selected from a button toggle.
-  </div>
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center mb-16" style="height:160px">
-      <img src="assets/img/doc/buttontoggle-do.png" alt="">
+    <div class="doc-title-4 mb-8">
+      Two text toggle
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/buttontoggle-dont.png" alt="">
+    <div class="doc-example-container">
+      <div app-docs-example="buttontoggle-two-text"></div>
     </div>
-  </div>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
+    <div class="doc-title-4 mb-8">
+      Three icon toggle
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="buttontoggle-three-icon"></div>
+    </div>
 
-  <div class="docs-usage-spec docs-usage-center-no-scale" style="height:280px">
-    <img src="assets/img/doc/buttontoggle-spec.png" alt="" style="width: 72%">
-  </div>
+    <div class="doc-title-4 mb-8">
+      Two icon toggle
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="buttontoggle-two-icon"></div>
+    </div>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the
-    Sketch App UI:
-  </div>
-  <div sketch-link=""></div>
+    <div class="doc-title-4 mb-8">
+      Secondary color: Gray toggle
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="buttontoggle-secondary-color"></div>
+    </div>
 
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
+    </div>
 
+    <div class="doc-desc-2">
+      To get a customized button-toggle, just set
+      <span class="doc-desc-2-highlight"
+        >appearance / disabled / multiple / name / value / vertical / change /
+        selected
+      </span>
+    </div>
 
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>appearance</td>
+          <td>The appearance for all the buttons in the group.</td>
+          <td>MatButtonToggleAppearance</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>disabled</td>
+          <td>Whether multiple button toggle group is disabled.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>multiple</td>
+          <td>Whether multiple button toggles can be selected.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
 
-</body>
+        <tr>
+          <td>name</td>
+          <td>name attribute for the underlying input element.</td>
+          <td>string</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>value</td>
+          <td>Value of the toggle group.</td>
+          <td>any</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>vertical</td>
+          <td>Whether the toggle group is vertical.</td>
+          <td>boolean</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>change</td>
+          <td>Event emitted when the group&apos;s value changes.</td>
+          <td>EventEmitter<matbuttontogglechange></matbuttontogglechange></td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>selected</td>
+          <td>Selected button toggles in the group.</td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="doc-divider"></div>
+
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
+    </div>
+    <div class="doc-desc-2">
+      Only one item can be selected from a button toggle.
+    </div>
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w100 docs-usage-center mb-16"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/buttontoggle-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w100 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/buttontoggle-dont.png" alt="" />
+      </div>
+    </div>
+
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
+
+    <div
+      class="docs-usage-spec docs-usage-center-no-scale"
+      style="height:280px"
+    >
+      <img
+        src="assets/img/doc/buttontoggle-spec.png"
+        alt=""
+        style="width: 600px"
+      />
+    </div>
+
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <a
+      class="doc-download-link"
+      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
+      >Download Sektch File</a
+    >
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link=""></div>
+    <div sketch-link="1"></div>
+  </body>
 </html>
